Add NSudo submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Adobe GenP 3.0/Resources/NSudo"]
 	path = Adobe GenP 3.0/Resources/NSudo
 	url = https://github.com/M2TeamArchived/NSudo
+[submodule "Adobe GenP 2.7/Resources/NSudo"]
+	path = Adobe GenP 2.7/Resources/NSudo
+	url = https://github.com/M2TeamArchived/NSudo
